@@ -1,36 +1,0 @@
-  function GetBlogTruyenDirectoryPageNumber: Byte;
-  var
-    i: Cardinal;
-  begin
-    Result := INFORMATION_NOT_FOUND;
-    if not GetPage(TObject(Source), WebsiteRoots[BLOGTRUYEN_ID, 1] +
-      BLOGTRUYEN_BROWSER, 0) then
-    begin
-      Result := NET_PROBLEM;
-      Source.Free;
-      Exit;
-    end;
-    parse.Clear;
-    Parser := THTMLParser.Create(PChar(Source.Text));
-    Parser.OnFoundTag := OnTag;
-    Parser.OnFoundText := OnText;
-    Parser.Exec;
-    Parser.Free;
-    if parse.Count = 0 then
-    begin
-      Source.Free;
-      Exit;
-    end;
-    for i := 0 to parse.Count - 1 do
-    begin
-      if (Pos('[cuối]', parse[i]) > 0) then
-      begin
-        s := TrimRight(TrimLeft(GetString(parse[i - 1], 'LoadPage(', ')')));
-        APage := StrToInt(s);
-        Result := NO_ERROR;
-        Source.Free;
-        Exit;
-      end;
-    end;
-    Source.Free;
-  end;
