@@ -16,6 +16,7 @@ Changelog:
 [*] GManga: fixed all
 [*] TruyenTranhTuan: fixed all
 [-] Manga24H: removed
+[*] BlogTruyen: fixed all
 Full changes: https://github.com/riderkick/FMD/compare/0.9.117.0...0.9.118.0
 
 0.9.117.0 (12-06-2017)
